# SCM-ROS2-driver

./:  .gitlab-ci.yml  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cam_param.yaml  package.xml
config/: params.yaml
config/cam_params/: 2m1_params.yaml  8m1_params.yaml  rgbd_color_params.yaml  rgbd_depth_params.yaml  tof_params.yaml
config/internal_scm/: config_ros.sh  cyclone_config.xml  fastdds_config.xml
config/rviz/: scm_rgb.rviz  scm_rgbd.rviz  scm_tof.rviz
doc/: camera_controls.md  pcl_sample_appli.md  quick_start.md  topics.md
include/: camera.h  tof.h
include/cis_scm/: Controls.hpp  Device.h  ExternalDevice.hpp  InternalDevice.hpp  Params.hpp  controls.hpp  rgb_driver.hpp  rgbd_driver.hpp  tof_driver.hpp
include/tof1_driver/: Device.h  rgbd_driver.hpp  tof_driver.hpp
launch/: pcl_sample_launch.py  rgb_launch.py  rgb_viz_launch.py  rgbd_launch.py  rgbd_viz_launch.py  tof_launch.launch  tof_launch.py  tof_rtab_pointcloud.launch  tof_viz.launch  tof_viz_launch.py
scm_internal_process/: CMakeLists.txt
scm_internal_process/libtof/: CMakeLists.txt  tof.cpp  tof.h  tof_calib.cpp  tof_math.h
scm_internal_process/scm1camera/: CMakeLists.txt  camera.h  camerabase_color.cpp  camerabase_raw.cpp  cameraoutput.cpp
script/: set_udev_rules.sh
src/: Controls.cpp  Device.cpp  ExternalDevice.cpp  InternalDevice.cpp  Params.cpp  rgb_driver.cpp  rgb_node.cpp  rgbd_driver.cpp  rgbd_node.cpp  tof_driver.cpp  tof_node.cpp
src/InternalDevices/: RGBDInternalDevice.cpp  RGBInternalDevice.cpp  ToFInternalDevice.cpp
src/example/: pcl_sample.cpp
